styles/styles.css
/* ... */
          /* Reviews end */
          /* FAQ-contact start */

.faq-contact-container {
  display: grid;
  grid-template-columns: 1fr;

  .header {
    h2 {
      color: var(--color-heading);
      margin-top: 3rem;
      font-size: var(--fs-h4);
      font-weight: var(--fw-extra);
    }
    
    .headline-splitter {
      display: none;
    }
    
  }

  p {
    margin-top: 1rem;
    font-size: var(--fs-body-l);
    line-height: 1.6;
    color: var(--color-paragraph);
  }
    
  .faq-accordion {
    --_faq-border: 1px solid var(--color-faqoutline);
    margin-top: 3rem;
    border: var(--_faq-border);
    border-radius: 8px;

    details {
      background-color: var(--color-faqbg);
      border-bottom: var(--_faq-border);
      /* No border on last details-element to prevent double border*/
      &:last-child {
        border-bottom: unset;
      }
      &[open] {
        .answer {
          border-top: var(--_faq-border);
        }
      }
    }

    summary {
      display: flex;
      justify-content: space-between;
      align-items: center;
      color: var(--color-heading);
      font-size: var(--fs-body-m);
      font-weight: var(--fw-semi);
      line-height: 1.3;
      padding: 1rem;
      cursor: pointer;
      user-select: none;
      transition: var(--transition-default);

      &:hover {
        background-color: var(--color-faqchevronbg);
      }

      /* Hide marker */
      list-style: none;
    }

    p {
      padding-inline: 1rem;
      font-size: var(--fs-body-s);
      line-height: 1.6;
      &:last-child {
        padding-bottom: 1rem;
      }
    }

    .chevron-faq {
      background-color: var(--color-faqchevronbg);
      color: var(--color-faqchevronarrow);
      width: 36px;
      height: 36px;
      font-size: .625rem;
      /* Set pointer-events none for click to pass through to summary element*/
      pointer-events: none;
      /* Prevent shrunk and skewed chevron buttons */
      flex-shrink: 0;
      /* Add margin to the left of the button equal to parent padding-right */
      margin-left: 1rem;
      /* Transition to smooth out color change and rotation */
      transition: all .5s ease;
      /* Add some slight outlining around the chevrons */
      box-shadow: 0 0 4px 0px var(--color-faqoutline);
    }

    details[open] .btn-chevron {
      transform: rotate(180deg);
      background-color: var(--color-primary);
      color: var(--color-white);
      /* Change outline color to give it a glowing appearance */
      box-shadow: 0 0 4px 0px var(--color-primary);
    }
  }

  .contact {
    margin-top: 3.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .btn-contact {
    border-style: none;
    border-radius: 6px;
    font-size: var(--fs-body-s);
    font-weight: var(--fw-semi);
    line-height: 1.6;
    padding: 1em 2em;
  }

  .contact-cards {
    display: none;
    width: 100%;
    gap: 1.5rem;
    .chat-card, .phone-card {
      /* Make cards take up equal width */
      flex-basis: 100%;
    }
  }

  .contact-card {
    padding: 1.5em;
    border: 1px solid var(--color-gray-300);
    border-radius: 8px;
  }

  .fa-comment-dots {
    /* Flip icon horizontally to match design */
    transform: scaleX(-1);
  }
  .cc-icon {
    font-size: 1.75rem;
  }
  .phone-color {
    color: var(--color-primary);
  }
  .chat-color {
    color: #22C55E;
  }
  .card-text, a {
    font-size: var(--fs-body-s);
  }
  a {
    display: block;
    margin-top: 1rem;
    i {
      margin-left: 1rem;
    }
  }

  .subscribe {
    margin-top: 2.5rem;
    padding: 3rem 1rem 0;
    background-color: var(--color-subscribebg);
    border-radius: 8px;
  
    display: flex;
    flex-direction: column;
  
    .cta {
      display: flex;
      align-items: center;
  
      h2 {
        font-size: 1.375rem;
        line-height: 1.35;
        &.desktop-text {
          display: none;
        }
      }
      
      img {
        margin-right: 1rem;
      }
    }
  
    .input-container {
      margin-top: 2.5rem;
      margin-bottom: 2rem;
      display: flex;
      position: relative;

      * {
        border: none;
      }

      input {
        flex-grow: 1;
        min-width: 0; /* prevent button from being pushed outside padding */
        font-size: 1rem;
        padding-left: 2.25rem;
        border-radius: 8px 0 0 8px;
        border: 1px solid var(--color-gray-400);
        color: var(--color-gray-500);
      }

      .mail-icon {
        position: absolute;
        top: 50%;
        left: .75rem;

        transform: translateY(-50%);
      }

      .btn-subscribe {
        border-radius: 0 8px 8px 0;
        font-size: 1rem;
        line-height: 1.625;
        font-weight: var(--fw-semi);
      }
    }
  }
}
  
          /* FAQ-contact end */
          /* Footer start */

  .footer {
    padding: 1.5rem 0;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    color: var(--color-gray-600);
    font-size: var(--fs-body-s);
    line-height: 1.6;
  }
/* ... */

